--- a/app/src/main/res/layout/activity_browser.xml
+++ b/app/src/main/res/layout/activity_browser.xml
@@ -32,7 +32,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/settings"
-                android:focusable="true" />
+                android:focusable="true"
+                android:background="@drawable/button_background_selector" />
 
         </LinearLayout>
 
